# misaki

./: CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  release-plz.toml
.github/workflows/: binaries.yml  crates-io.yml  release.yml
crates/cli/: CHANGELOG.md  Cargo.toml
crates/cli/src/: main.rs
crates/core/: CHANGELOG.md  Cargo.toml
crates/core/src/: flaresolverr.rs  lib.rs
