[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.0.4"
description = "Fast, asynchronous link checker with optional FlareSolverr support."
authors = ["Ravencentric <me@ravencentric.cc>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.88"

[workspace.dependencies]
reqwest = { version = "0.12.20", default-features = false, features = ["http2", "rustls-tls", "charset", "json"] }
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1"
serde_json = "1"
futures = "0.3.31"
