[package]
name = "misaki-cli"
version.workspace = true
description.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
documentation.workspace = true

[[bin]]
name = "misaki"
path = "src/main.rs"

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true, features = ["signal"]}
anyhow = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
misaki-core = { version = "0.1.0", path = "../core" }
clap = { version = "4.5.42", features = ["derive"] }
clap-stdin = "0.6.0"
owo-colors = "4"
itertools = "0.14.0"
